--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
         <title>Meu Sitezinho</title>
 
-        <meta name="viewport" content="width=device-width, initial-scale=5.0">
+        <meta name="keywords" content="oFernandes, Fernandes, Sitezinho, fernandes, meu Sitezinho, meu sitezinho">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="venha conhecer o homem mais lindo do planeta terra">
         <meta name="author" content="oFernandes">
 
