--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
     <h1 id="meuid" class="color">TheGoat site</h1>
 
-    <p id="math" class="color-blue">oFernandes</p><br>
+    <center><p id="math" class="color-blue">oFernandes</p><br></center>
 
-    <img src="img/e493ad0c-1758-403c-95dc-463b0bf950c3.jpg" alt=""
-        width="200" height="200"> 
+    <center><img src="img/e493ad0c-1758-403c-95dc-463b0bf950c3.jpg" alt=""
+        width="200" height="200"> </center>
 
-        <p>este sou eu</p>
+        <center><p>este sou eu</p></center>
 
     <p></p>
     <a href="https://www.instagram.com/ofernandesz._/" target="_blank">
