--- a/home.html
+++ b/home.html
@@ -8,6 +8,6 @@
 <body>
     <a href="index.html">voltar</a>
     <h1>Home</h1>
-    <img src="https://ih1.redbubble.net/image.5171963319.2981/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="Maça" width="500" height="500">
+    <center><img src="https://ih1.redbubble.net/image.5171963319.2981/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="Maça" width="500" height="500"></center>
 </body>
 </html>
